# yz-people

./: .gitignore  CHANGELOG.md  README.md  manifest.json  pyproject.toml
scripts/: build_wheel.sh
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/scripts/: install-to-frontend.mjs
ui/src/: App.tsx  PeoplePage.tsx  index.ts  store.ts  types.ts
ui/src/components/: BatchRepsRecorder.tsx  BatchScriptRecorder.tsx  CloneVoicePanel.tsx  EnrollmentWizard.tsx  NewPersonDialog.tsx  PersonCard.tsx  ProfileEditor.tsx  SceneRecorder.tsx
ui/src/hooks/: useBatchRecorder.ts  useMediaRecorder.ts  usePeople.ts
ui/src/lib/: amplitudeSegmenter.ts  api.ts  capabilities.tsx  store-context.tsx  wavEncoder.ts  ws.tsx
ui/tests/: smoke.spec.ts
yz_people/: __init__.py  __main__.py  observer.py  persistent_settings.py  server.py  settings.py
yz_people/static/: index.html
yz_people/static/assets/: index-B-f7Qsgd.js  index-BPbPqZW8.js  index-Bj0HtFjc.js  index-DGnUMhWW.js
